# LLMContextManager

./: .gitignore  AGENTS.md  README.md  flake.nix  pyproject.toml
src/: __init__.py  main.py
src/database/: db.py  models.py
src/styles/: theme.tcss  utils.tcss
src/ui/: app.py  app.tcss  styles.py
src/utils/: formatters.py
src/widgets/: conversation_path.py  conversation_path.tcss  graph_view.py  graph_view.tcss  message_tree.py  message_tree.tcss
